# lib-template-cpp

./: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  checks.sh  requirements.txt
.github/workflows/: c_checks.yml  codeql.yml  coverage.yml  cpp_checks.yml  pre-commit-checks.yml  python_checks.yml
includes/: lib.h  types.h
src/: CMakeLists.txt  lib.cpp
test/: CMakeLists.txt  lib_test.cpp  main.cpp
